<resources>
    <string name="app_name">Fight Corona</string>
    <string name="register"><u>Register</u>.</string>
    <string-array name="awareness">
    <item>What is Corona Virus</item>
    <item>How does it spread</item>
    <item>Ways to prevent it</item>
    <item>Methods used by Doctors</item>
    </string-array>
    <string name="para_about">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.</string>
    <string name="para_about1">Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.
                             Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.</string>
    <string name="spread">The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).You should not touch surfaces or objects unless needed.</string>
    <string name="prevention">
        <li>Clean your hands often. Use soap and water, or an alcohol-based hand rub.</li>

        \n\n<li>Maintain a safe distance from anyone who is coughing or sneezing.</li>
       \n \n<li>Wear a mask when physical distancing is not possible.</li>
       \n\n <li>Don’t touch your eyes, nose or mouth.</li>
       \n \n<li>Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.</li>
        \n\n<li>Stay home if you feel unwell.</li>
        \n\n<li>If you have a fever, cough and difficulty breathing, seek medical attention.</li>

</string>
    <string name="discoveries">
        <ul>1. COVID-19 was initially thought to cause deaths due to pneumonia- a lung infection- and so Ventilators were thought to be the best way to treat sick patients who couldn’t breathe. Doctors found that the virus causes blood clots in the blood vessels of the lungs and other parts of the body and this causes the reduced oxygenation Doctors now know that by just providing oxygen by ventilators will not help but we have to prevent and dissolve the micro clots in the lungs. This is why drugs like *Asprin and Heparin ( blood thinners that prevents clotting)  are used as protocol in treatment regimens since June 2020. </ul>
       \n\n\n<ul>2. Previously patients used to drop dead on the road or even before reaching a hospital due to reduced oxygen in their blood- OXYGEN SATURATION. This was because of HAPPY HYPOXIA- where even though the oxygen saturation was gradually reducing the COVID-19 patients did not have symptoms until it became critically less, like sometimes even 70%. Normally we become breathless if oxygen saturation reduces below 90%. This breathlessness is not triggered in Covid patients and so severely sick patients were admitted very late to the hospitals in February 2020. Now since knowing about happy hypoxia Doctors are monitoring oxygen saturation of all covid patients with a simple pulse oxymeter and getting them to hospital if their oxygen saturation drops to 94% or less. This gives more time for doctors to correct the oxygen deficiency in the blood and a better survival chance.</ul>
       \n\n\n <ul>3. We did not have drugs to fight the corona virus in February 2020. Doctors were only treating the complications caused by it that is hypoxia. Hence most patients became severely infected.
Now we have 2 important medicines: <b>FAVIPIRAVIR and REMDESIVIR</b>

They are ANTIVIRALS that can reduce the effect of corona virus. By using these two medicines doctors can prevent patients from becoming severely infected and therefore cure them before they go to hypoxia. These medicines does not ensure full cure of corona virus.
</ul>
        \n\n\n<ul>4. Many Covid-19 patients die not just because of the virus but also due to patients own immune system responding In an exaggerated manner called CYTOKINE STORM. This stormy strong immune response not only kills the virus but also kills the patients. In February 2020 doctors didn’t know how to prevent it from happening. Now since September 2020, doctors know that easily available medicines called Steroids, that doctors around the world have been using for almost 80 years can be used to prevent the cytokine storm in some patients (who does not have diabetes).</ul>
       \n\n\n<ul>5. Now doctors also know that people with hypoxia became better just by making them lie down on their belly- known as prone position. This increases the oxygen capacity in lungs.</ul>

    </string>
    <string name="myth1">Studies show hydroxychloroquine does not have clinical benefits in treating COVID-19</string>
    <string name="masks">People should NOT wear masks while exercising as masks may reduce the ability to breathe comfortably. \nSweat can make the mask become wet more quickly which makes it difficult to breathe and promotes the growth of microorganisms. The important preventive measure during exercise is to maintain physical distance of at least one meter from others.</string>
    <string name="swimming">Water or swimming does not transmit the COVID-19 virus. \nThe COVID-19 virus does not transmit through water while swimming. However, the virus spreads between people when someone has close contact with an infected person.</string>
    <string name="shoes">The likelihood of COVID-19 being spread on shoes and infecting individuals is very low. As a precautionary measure, particularly in homes where infants and small children crawl or play on floors, consider leaving your shoes at the entrance of your home. This will help prevent contact with dirt or any waste that could be carried on the soles of shoes.</string>
    <string name="co2">The prolonged use of medical masks* when properly worn, DOES NOT cause CO2 intoxication nor oxygen deficiency</string>
    <string name="fever">Thermal scanners CANNOT detect COVID-19. They are effective in detecting people who have a fever (i.e. have a higher than normal body temperature). They cannot detect people who are infected with COVID-19. There are many causes of fever. Call your healthcare provider if you need assistance or seek immediate medical care if you have fever and live in an area with malaria or dengue.</string>
    <string name="soup">Adding pepper to your soup or other meals DOES NOT prevent or cure COVID-19 Hot peppers in your food, though very tasty, cannot prevent or cure COVID-19. The best way to protect yourself against the new coronavirus is to keep at least 1 metre away from others and to wash your hands frequently and thoroughly. It is also beneficial for your general health to maintain a balanced diet, stay well hydrated, exercise regularly and sleep well.</string>
    <string name="temp">Exposing yourself to the sun or temperatures higher than 25°C DOES NOT protect you from COVID-19</string>
    <string name="breathe">Being able to hold your breath for 10 seconds or more without coughing or feeling discomfort DOES NOT mean you are free from COVID-19</string>
    <string name="antibiotics">Antibiotics CANNOT prevent or treat COVID-19. Antibiotics work only against bacteria, not viruses. COVID-19 is caused by a virus, and therefore antibiotics should not be used for prevention or treatment. However, if you are hospitalized for COVID-19, you may receive antibiotics because bacterial co-infection is possible.</string>
    <string name="alertmsg">*Take care of yourself \n Please be isolated in one room to protect other family members from covid19.</string>
    <string name="alertMsg1">*Take care of yourself</string>
    <string name="dailyCases"><a href="https://covidindia.org/">Daily Covid Cases</a></string>


</resources>