<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".Awareness">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/black"
            android:scaleType="centerInside"
            android:src="@drawable/myth1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C0CA33"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/antibiotics"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42A5F5"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/masks"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C0CA33"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/fever"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42A5F5"
            android:justificationMode="inter_word"
            android:padding="10dp"
            android:text="@string/shoes"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C0CA33"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/soup"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42A5F5"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/temp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C0CA33"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/breathe"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42A5F5"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/myth1"
            android:textColor="@color/black"
            android:textSize="20sp"/>











    </LinearLayout>

</ScrollView>
