<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".Awareness">



        <TextView
            android:id="@+id/aware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What is corona virus"
            android:background="#C0CA33"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:background="#C0CA33"
            android:text="@string/para_about"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:background="#C0CA33"
            android:text="@string/para_about1"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="How does it spread"
            android:background="#42A5F5"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:background="#42A5F5"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:text="@string/spread"
            android:textSize="19sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Ways to prevent it"
            android:background="#C0CA33"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:justificationMode="inter_word"
            android:background="#C0CA33"
            android:textColor="@color/black"
            android:text="@string/prevention"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:background="#42A5F5"
            android:text="Discoveries by Doctors"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:background="#42A5F5"
            android:text="@string/discoveries"
            android:textSize="19sp" />



    </LinearLayout>

</ScrollView>






